# bitfinex-api

./: .gitignore  Cargo.toml  readme.md
.devcontainer/: devcontainer.json
examples/: authenticated_endpoints.rs  public_endpoints.rs
src/: auth.rs  bitfinex.rs  lib.rs  main.rs
src/api/: client.rs  common.rs  endpoint.rs  error.rs  ignore.rs  mod.rs  params.rs  query.rs
src/api/authenticated/: mod.rs
src/api/authenticated/account/: mod.rs
src/api/authenticated/cancel_funding_offer/: mod.rs
src/api/authenticated/funding/: mod.rs  types.rs
src/api/authenticated/fundings/: mod.rs  types.rs
src/api/authenticated/orders/: mod.rs  types.rs
src/api/authenticated/submit_funding_offer/: mod.rs
src/api/authenticated/trades/: mod.rs
src/api/authenticated/wallets/: mod.rs
src/api/book/: book.rs  common.rs  raw_book.rs
src/api/candles/: mod.rs
src/api/derivative_status/: mod.rs
src/api/derivative_status_history/: mod.rs
src/api/funding_statistics/: mod.rs
src/api/leaderboards/: mod.rs
src/api/liquidations/: mod.rs
src/api/platform_status/: mod.rs
src/api/public/: mod.rs
src/api/public/book/: book.rs  mod.rs  raw_book.rs
src/api/public/candles/: mod.rs
src/api/public/derivative_status/: mod.rs
src/api/public/derivative_status_history/: mod.rs
src/api/public/funding_statistics/: mod.rs
src/api/public/leaderboards/: mod.rs
src/api/public/liquidations/: mod.rs
src/api/public/platform_status/: mod.rs
src/api/public/stats/: mod.rs
src/api/public/ticker/: mod.rs
src/api/stats/: mod.rs
src/api/ticker/: mod.rs
src/api/tickers/: mod.rs
src/api/tickers_history/: mod.rs
src/api/trades/: mod.rs
src/auth/: mod.rs
src/public/: candles.rs  mod.rs  plateform_status.rs  ticker.rs  tickers.rs  tickers_history.rs
(+21 files in other folders)
