[package]
name = "bitfinex-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# None

[dependencies]
url = "2.4.1"
http = "0.2.9"
bytes = "1.5.0"
hmac = "0.12.1"
sha2 = "0.10.7"
hex = "0.4.3"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
serde_with = "3.3.0"
serde_repr = "0.1.16"
async-trait = { version = "0.1.73" }
thiserror = { version = "^1.0.48" }
reqwest = { version = "0.11.20", features = ["blocking"] }
derive_builder = "0.12.0"

[dev-dependencies]
tokio = { version = "1.32.0", features = ["full"] }
